k8s/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: klock-api-app-deployment
  namespace: klock
spec:
  selector:
    matchLabels:
      app: klock-api-app-pod
  template:
    metadata:
      labels:
        app: klock-api-app-pod
    spec:
      tolerations:
        - key: eks.amazonaws.com/compute-type
          operator: Equal
          value: ec2
          effect: NoSchedule
      containers:
        - name: klock-api-app-container
          image: $IMAGE_NAME
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      nodeSelector:
        eks.amazonaws.com/compute-type: fargate
